Hopefully Fixed Snow Crash and also added back Auth